# BiblioBot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  instant.py  jobs.py  jobs_main.py  last_minute.py  main.py  manual_request.py  manul_attempt.py  pyproject.toml  requirements.txt  reservation.py  reservation_api.py  reservation_time.py  schedule_utils.py  slot_datetime.py  utils.py  validation.py
.github/workflows/: sync-staging-db.yml
src/: main.py  manual_request.py
src/biblio/: access.py  app.py  commands.py  fallbacks.py  gsheets.py  jobs.py  reservation.py  server.py  user.py  writer.py
src/biblio/admin/: action.py  maintenance.py  notif.py  railway.py  services.py
src/biblio/bot/:  commands.txt  commands.py  messages.py  user.py
src/biblio/config/: config.py  logger.py
src/biblio/db/: build.py  fetch.py  insert.py  schema.sql  update.py  write.py
src/biblio/db/migrations/: 001_add_reservation_timestamps.sql  002_add_reservation_entry.sql
src/biblio/reservation/: reservation.py  slot_datetime.py
src/biblio/selection/: cancel.py  confirm.py  date.py  duration.py  retry.py  time.py  type.py
src/biblio/tests/: read_timeout.py
src/biblio/utils/: keyboards.py  notif.py  parser.py  utils.py  validation.py
